# SpatiaLiteCpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.bat  deploy.sh  package.cmake  readme.md
api/: _auxiliary_8cpp.html  _auxiliary_8h.html  _auxiliary_8h_source.html  _blob_8cpp.html  _blob_8h.html  _blob_8h_source.html  _buffer_8hpp.html  _buffer_8hpp_source.html  _checksum_8cpp.html  _checksum_8h.html  _checksum_8h_source.html  _converter_8cpp.html  _converter_8h.html  _converter_8h_source.html  _dbf_8cpp.html  _dbf_8h.html  _dbf_8h_source.html  _dbf_field_8cpp.html  _dbf_field_8h.html  _dbf_field_8h_source.html  _dbf_list_8cpp.html  _dbf_list_8h.html  _dbf_list_8h_source.html  _dynamic_line_8cpp.html  _dynamic_line_8h.html  _dynamic_line_8h_source.html  _exif_tag_list_8cpp.html  _exif_tag_list_8h.html  _exif_tag_list_8h_source.html  _geometry_collection_8cpp.html  _geometry_collection_8h.html  _geometry_collection_8h_source.html  _line_string_8cpp.html  _line_string_8h.html  _line_string_8h_source.html  _output_buffer_8cpp.html  _output_buffer_8h.html  _output_buffer_8h_source.html  _point_8cpp.html  _point_8h.html  (+111 more)
api/search/: all_1.js  all_3.js  all_7.js  all_f.js  functions_0.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_e.js  functions_f.js  pages_0.js  searchdata.js
docs/resources/: customdoxygen.css
docs/web/: demos.html  index.html  start.html
docs/web/css/: spatialitec++.css
examples/: CMakeLists.txt
ext/SQLiteCppLocal/: CMakeLists.txt
include/SpatiaLiteCpp/: Auxiliary.h  Blob.h  Buffer.hpp  Checksum.h  Converter.h  Dbf.h  DbfField.h  DbfList.h  DynamicLine.h  ExifTagList.h  GeometryCollection.h  LineString.h  OutputBuffer.h  Point.h  Polygon.h  Ring.h  Shapefile.h  SpatiaLiteCpp.h  SpatiaLiteCppAbi.h  SpatialDatabase.h  VectorLayersList.h  WfsCatalog.h  WfsSchema.h  XmlBlob.h  XmlDocument.h
src/: CMakeLists.txt  GeometryCollection.cpp  SpatialDatabase.cpp  WfsCatalog.cpp
test/SpatiaLiteCpp/: CMakeLists.txt
